css correction, h1 padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,12 +169,14 @@ ul{
      }   
     header h1{
         display: block;
+        padding-left: 0px;padding-right: 0px;
         position: static; 
         text-align: center;
         width:100%;        
     } 
     nav{
         background-color: white;
+        display: block;
         padding-bottom: 20px;
         padding-top:10px;               
         top:70px; left:0px;              
